Fix numbers cutting off after overflow

--- a/Calculator.css
+++ b/Calculator.css
@@ -31,11 +31,14 @@ button:hover{
   color: purple;
 }
 .display{
+  scrollbar-color: black purple;
+  scrollbar-width: thin;
+  overflow: hidden;
   border-style: solid;
   border-color: grey;
   border-radius: 2px;
   width: 125px;
-  height: 25px;
+  height: 30px;
   margin-bottom: 2px;
   color: white;
   overflow: auto;
